adop-2555: disable migration tool

--- a/apps/adoption/adoption-cron-ccd-data-migration-tool/adoption-cron-ccd-data-migration-tool.yaml
+++ b/apps/adoption/adoption-cron-ccd-data-migration-tool/adoption-cron-ccd-data-migration-tool.yaml
@@ -14,7 +14,7 @@ spec:
       environment:
         MIGRATION_ID: ADOP-2555
         USE_CASE_ID_MAPPING: true
-        ENABLED: true
+        ENABLED: false
         UPDATE: rollback
         IDAM_REDIRECT_URL: https://apply-to-adopt-a-child-placed-in-your-care.service.gov.uk/receiver
         IDAM_CLIENT_ID: adoption-web
