Prod config for mediation webchat

--- a/apps/civil/civil-citizen-ui/prod.yaml
+++ b/apps/civil/civil-citizen-ui/prod.yaml
@@ -24,5 +24,11 @@ spec:
         IDAM_SIGN_OUT_REDIRECT_URL: https://www.moneyclaims.service.gov.uk/dashboard
         OAUTH_CLIENT_REDIRECT: https://www.moneyclaims.service.gov.uk/oauth2/callback
         DYNATRACE_TAG: https://js-cdn.dynatrace.com/jstag/17177a07246/bf00910jpo/608d999956617ad0_complete.js
+        WEB_CHAT_MEDIATION_ENABLED: true
+        WEB_CHAT_MEDIATION_UUID: 'script_202736819566d85c96c386f8.18964185'
+        WEB_CHAT_MEDIATION_TENANT: 'aG1jdHN4MTAx'
+        WEB_CHAT_MEDIATION_CHANNEL: 'NBC_Mediation_Webchat'
+        WEB_CHAT_MEDIATION_CHANNEL_UUID: 'EfkT-IMvRReo_VGNJ5ietQ'
+        WEB_CHAT_MEDIATION_BUTTON_ID: '__8x8-chat-button-container-script_202736819566d85c96c386f8.18964185'
       spotInstances:
         enabled: false
