--- a/apps/probate/demo/base/kustomization.yaml
+++ b/apps/probate/demo/base/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - ../../probate-cron-make-dormant-cases/probate-cron-make-dormant-cases.yaml
   - ../../probate-cron-reactivate-dormant-cases/probate-cron-reactivate-dormant-cases.yaml
   - ../../probate-cron-hmrc-extract/probate-cron-hmrc-extract.yaml
+  - ../../probate-cron-iron-mountain-extract/probate-cron-iron-mountain-extract.yaml
   - ../../probate-cron-ccd-data-migration-tool/probate-cron-ccd-data-migration-tool.yaml
   - ../../probate-cron-smee-and-ford-extract/probate-cron-smee-and-ford-extract.yaml
   - ../../../rbac/nonprod-role.yaml
@@ -22,5 +23,6 @@ patches:
   - path: ../../probate-cron-reactivate-dormant-cases/demo/demo.yaml
   - path: ../../probate-cron-smee-and-ford-extract/demo/demo.yaml
   - path: ../../probate-cron-ccd-data-migration-tool/demo/demo.yaml
+  - path: ../../probate-cron-iron-mountain-extract/demo/demo.yaml
   - path: ../../identity/demo.yaml
   - path: ../../serviceaccount/demo.yaml
