--- a/apps/probate/perftest/base/kustomization.yaml
+++ b/apps/probate/perftest/base/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ../../probate-cron-ccd-data-migration-tool/probate-cron-ccd-data-migration-tool.yaml
   - ../../probate-cron-hmrc-extract/probate-cron-hmrc-extract.yaml
   - ../../probate-cron-smee-and-ford-extract/probate-cron-smee-and-ford-extract.yaml
+  - ../../probate-cron-iron-mountain-extract/probate-cron-iron-mountain-extract.yaml
   - ../../../rbac/nonprod-role.yaml
   - ../../../base/slack-provider/perftest
 namespace: probate
