--- a/apps/family-public-law/fpl-cron-ccd-data-migration-tool/prod/00.yaml
+++ b/apps/family-public-law/fpl-cron-ccd-data-migration-tool/prod/00.yaml
@@ -6,9 +6,9 @@ spec:
   releaseName: fpl-cron-ccd-data-migration-tool
   values:
     job:
-      schedule: "00 20 14 01 *"
+      schedule: "00 13 15 01 *"
       environment:
         ENABLED: true
-        MIGRATION_ID: DFPL-2572
+        MIGRATION_ID: DFPL-2635
         IDAM_API_URL: https://idam-api.platform.hmcts.net
-        USE_CASE_ID_MAPPING: false
+        USE_CASE_ID_MAPPING: true
