--- a/apps/ccd/ccd-case-disposer/prod.yaml
+++ b/apps/ccd/ccd-case-disposer/prod.yaml
@@ -21,5 +21,5 @@ spec:
         DOCUMENT_STORE_HOST: "http://dm-store-prod.service.core-compute-prod.internal"
         DEFINITION_STORE_HOST: "http://ccd-definition-store-api-prod.service.core-compute-prod.internal"
         LOG_AND_AUDIT_HOST: "http://lau-case-backend-prod.service.core-compute-prod.internal"
-        DELETE_CASE_TYPES: "MoneyClaimCase"
-        SIMULATED_CASE_TYPES:
+        DELETE_CASE_TYPES: 
+        SIMULATED_CASE_TYPES: "A58"
