update redis host & allowed courts

--- a/apps/private-law/prl-citizen-frontend/ithc.yaml
+++ b/apps/private-law/prl-citizen-frontend/ithc.yaml
@@ -39,7 +39,7 @@ spec:
         CCD_URL: http://ccd-data-store-api-ithc.service.core-compute-ithc.internal
         DOCUMENT_MANAGEMENT_URL: http://ccd-case-document-am-api-ithc.service.core-compute-ithc.internal
         COS_URL: http://prl-cos-ithc.service.core-compute-ithc.internal
-        REDIS_HOST: prl-citizen-frontend-secondary-redis-ithc.redis.cache.windows.net
+        REDIS_HOST: prl-citizen-frontend-redis-ithc.redis.cache.windows.net
         REASONABLE_ADJUSTMENTS: https://cui-ra.ithc.platform.hmcts.net
         FACT_URL: http://fact-api-ithc.service.core-compute-ithc.internal
         EQUALITY_URL: https://pcq.ithc.platform.hmcts.net
@@ -49,7 +49,7 @@ spec:
         ENABLE_RA_COMPONENT: true
         ENABLE_CASE_TRAIN_TRACK: true
         ENABLE_PCQ_COMPONENT: true
-        ALLOWED_COURTS: Swansea Civil Justice Centre
+        ALLOWED_COURTS: Swansea Civil Justice Centre,Kingston-upon-Hull Combined Court Centre,Grimsby Combined Court Centre
     global:
       environment: ithc
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
