--- a/apps/ccd/ccd-api-gateway-web/demo.yaml
+++ b/apps/ccd/ccd-api-gateway-web/demo.yaml
@@ -10,4 +10,4 @@ spec:
         CORS_ORIGIN_WHITELIST: "*"
         TIMING-ALLOW-ORIGIN: "https://www-ccd.demo.platform.hmcts.net"
         DUMMY_VAR_TO_REDEPLOY: 1
-        ADDRESS_LOOKUP_URL: "https://api.os.uk/search/places/v1/postcode?dataset=DPA,LPI&postcode=${postcode}&key=${key}"
+        ADDRESS_LOOKUP_URL: "https://api.os.uk/search/places/v1/postcode?dataset=DPA,LPI&postcode=\${postcode}&key=\${key}"
