--- a/apps/ccd/ccd-api-gateway-web/demo.yaml
+++ b/apps/ccd/ccd-api-gateway-web/demo.yaml
@@ -10,3 +10,4 @@ spec:
         CORS_ORIGIN_WHITELIST: "*"
         TIMING-ALLOW-ORIGIN: "https://www-ccd.demo.platform.hmcts.net"
         DUMMY_VAR_TO_REDEPLOY: 1
+      image: hmctspublic.azurecr.io/ccd/api-gateway-web:prod-1609f8d-20250108160353 #{"$imagepolicy": "flux-system:demo-ccd-api-gateway-web"}
