--- a/apps/help-with-fees/help-with-fees-publicapp/demo-image-policy.yaml
+++ b/apps/help-with-fees/help-with-fees-publicapp/demo-image-policy.yaml
@@ -7,3 +7,6 @@ metadata:
 spec:
   imageRepositoryRef:
     name: help-with-fees-publicapp
+    filterTags:
+      pattern: '^pr-1000-[a-f0-9]+-(?P<ts>[0-9]+)'
+      extract: '$ts'
