CUI testing webchat in demo

--- a/apps/civil/civil-citizen-ui/demo.yaml
+++ b/apps/civil/civil-citizen-ui/demo.yaml
@@ -12,7 +12,7 @@ spec:
       readinessPeriod: 15
       useInterpodAntiAffinity: true
       ingressHost: moneyclaims.demo.platform.hmcts.net
-      image: hmctspublic.azurecr.io/civil/citizen-ui:prod-0bbabc3-20250116090451 #{"$imagepolicy": "flux-system:demo-civil-citizen-ui"}
+      image: hmctspublic.azurecr.io/civil/citizen-ui:pr-5169-e294a3c-20250116120709 #{"$imagepolicy": "flux-system:demo-civil-citizen-ui"}
       keyVaults:
         civil-cui:
           resourceGroup: civil-citizen-ui
@@ -37,3 +37,15 @@ spec:
         OAUTH_CLIENT_REDIRECT: https://moneyclaims.demo.platform.hmcts.net/oauth2/callback
         CIVIL_GENERAL_APPLICATIONS_URL: http://civil-general-applications-demo.service.core-compute-demo.internal
         TEMP_VAR: 3
+        WEB_CHAT_CNBC_ENABLED: true
+        WEB_CHAT_CNBC_UUID: 'script_1191773643670e666a982030.90013235'
+        WEB_CHAT_CNBC_TENANT: 'aG1jdHN4MTAx'
+        WEB_CHAT_CNBC_CHANNEL: 'NBC_CNBC_Web_Chat'
+        WEB_CHAT_CNBC_CHANNEL_UUID: 'YFOOn2KASGSaEd96HY8-BA'
+        WEB_CHAT_CNBC_BUTTON_ID: '__8x8-chat-button-container-script_1191773643670e666a982030.90013235'
+        WEB_CHAT_MEDIATION_ENABLED: true
+        WEB_CHAT_MEDIATION_UUID: 'script_202736819566d85c96c386f8.18964185'
+        WEB_CHAT_MEDIATION_TENANT: 'aG1jdHN4MTAx'
+        WEB_CHAT_MEDIATION_CHANNEL: 'NBC_Mediation_Webchat'
+        WEB_CHAT_MEDIATION_CHANNEL_UUID: 'EfkT-IMvRReo_VGNJ5ietQ'
+        WEB_CHAT_MEDIATION_BUTTON_ID: '__8x8-chat-button-container-script_202736819566d85c96c386f8.18964185'
