--- a/apps/et/et-ccd-case-migration/demo-01.yaml
+++ b/apps/et/et-ccd-case-migration/demo-01.yaml
@@ -6,7 +6,7 @@ spec:
   values:
     job:
       suspend: false
-      schedule: "*/10 * * * *"
+      schedule: "*/20 * * * *"
       image: hmctspublic.azurecr.io/et/migration:prod-587ed17-20250115083844 #{"$imagepolicy": "flux-system:et-ccd-case-migration"}
       environment:
         CCD_DATA_STORE_API_BASE_URL: http://ccd-data-store-api-demo.service.core-compute-demo.internal
@@ -16,7 +16,7 @@ spec:
         IDAM_S2S_URL: http://rpe-service-auth-provider-demo.service.core-compute-demo.internal
         IDAM_CLIENT_REDIRECT_URI: https://et-cos-demo.service.core-compute-demo.internal/oauth2redirect
         MIGRATION_QUERY_SIZE: 200
-        MIGRATION_ROLLBACK: false
+        MIGRATION_ROLLBACK: true
         MIGRATION_CASETYPE: ET_EnglandWales
     global:
       environment: demo
