--- a/apps/civil/civil-general-applications/aat-image-policy.yaml
+++ b/apps/civil/civil-general-applications/aat-image-policy.yaml
@@ -2,6 +2,14 @@ apiVersion: image.toolkit.fluxcd.io/v1beta1
 kind: ImagePolicy
 metadata:
   name: aat-civil-general-applications
+  annotations:
+    hmcts.github.com/prod-automated: disabled
 spec:
+  filterTags:
+    pattern: '^pr-1645-[a-f0-9]+-(?P<ts>[0-9]+)'
+    extract: '$ts'
+  policy:
+    alphabetical:
+      order: asc
   imageRepositoryRef:
-    name: aat-civil-general-applications
+    name: civil-general-applications
