--- a/apps/ia/ia-cron-ccd-migration-tool/aat-00.yaml
+++ b/apps/ia/ia-cron-ccd-migration-tool/aat-00.yaml
@@ -6,7 +6,8 @@ spec:
   releaseName: ia-cron-ccd-migration-tool
   values:
     job:
-      schedule: "23 13 * * *"
+      schedule: "00 14 17 1 *"
+      image: hmctspublic.azurecr.io/ia/cron-ccd-migration-tool:pr-174-e30d2d3-20250114154001 #{"$imagepolicy": "flux-system:demo-ia-cron-ccd-migration-tool"}
       cpuRequests: "1000m"
       cpuLimits: "2500m"
       memoryRequests: "1024Mi"
@@ -17,8 +18,12 @@ spec:
         MIGRATE_LEGACY_CASE_FLAGS: "false"
         MIGRATE_CLEAR_LEGACY_CASE_FLAGS: "false"
         MIGRATE_CASE_FLAGS_INTERNAL: "false"
-        MIGRATION_NUMBER_OF_CASES: 140000
+        MIGRATION_NUMBER_OF_CASES: 20000
         MIGRATE_APPELLANT_INTERPRETER_LANGUAGES_CASE: "false"
-        MIGRATE_APPEALS_REF_DATA_LOCATION_FLAG: true
+        MIGRATE_APPEALS_REF_DATA_LOCATION_FLAG: "false"
         MIGRATION_NUMBER_OF_THREADS: 20
-        AM_ROLE_ASSIGNMENT_API_BASE_URL: http://am-role-assignment-service-aat.service.core-compute-aat.internal
+        SERVICE_ID: BFA1
+        LOCATION_REF_DATA_URL: "http://rd-location-ref-api-demo.service.core-compute-demo.internal"
+        #MIGRATION_CASE_ID: 1721041488385667,1711125479412028,1711125604215247,1711125635460150,1711125676071874,1711125704587651,1606229697208842,1606229922775904
+        MIGRATE_IS_ARIA_MIGRATED: "false"
+        MIGRATE_DRAFT_TTL_SET: "true"
