--- a/apps/ia/ia-bail-case-api/demo-image-policy.yaml
+++ b/apps/ia/ia-bail-case-api/demo-image-policy.yaml
@@ -3,5 +3,11 @@ kind: ImagePolicy
 metadata:
   name: demo-ia-bail-case-api
 spec:
+  filterTags:
+    pattern: '^pr-540-[a-f0-9]+-(?P<ts>[0-9]+)'
+    extract: '$ts'
+  policy:
+    alphabetical:
+      order: asc
   imageRepositoryRef:
     name: ia-bail-case-api
