--- a/apps/ia/ia-cron-ccd-migration-tool/aat-00.yaml
+++ b/apps/ia/ia-cron-ccd-migration-tool/aat-00.yaml
@@ -6,7 +6,7 @@ spec:
   releaseName: ia-cron-ccd-migration-tool
   values:
     job:
-      schedule: "23 13 * * *"
+      schedule: "55 16 17 1 *"
       cpuRequests: "1000m"
       cpuLimits: "2500m"
       memoryRequests: "1024Mi"
@@ -17,8 +17,10 @@ spec:
         MIGRATE_LEGACY_CASE_FLAGS: "false"
         MIGRATE_CLEAR_LEGACY_CASE_FLAGS: "false"
         MIGRATE_CASE_FLAGS_INTERNAL: "false"
-        MIGRATION_NUMBER_OF_CASES: 140000
+        MIGRATION_NUMBER_OF_CASES: 20000
         MIGRATE_APPELLANT_INTERPRETER_LANGUAGES_CASE: "false"
-        MIGRATE_APPEALS_REF_DATA_LOCATION_FLAG: true
+        MIGRATE_APPEALS_REF_DATA_LOCATION_FLAG: "false"
         MIGRATION_NUMBER_OF_THREADS: 20
         AM_ROLE_ASSIGNMENT_API_BASE_URL: http://am-role-assignment-service-aat.service.core-compute-aat.internal
+        MIGRATE_IS_ARIA_MIGRATED: "false"
+        MIGRATE_DRAFT_TTL_SET: "true"
