DTSCCI-1224 Prod config for CNBC webchat (#36038)
* Update prod.yaml

* Update mediations config

* Update prod.yaml to toggle webchat functionality in prod

* Moved mediation to a separate PR

--- a/apps/civil/civil-citizen-ui/prod.yaml
+++ b/apps/civil/civil-citizen-ui/prod.yaml
@@ -24,5 +24,11 @@ spec:
         IDAM_SIGN_OUT_REDIRECT_URL: https://www.moneyclaims.service.gov.uk/dashboard
         OAUTH_CLIENT_REDIRECT: https://www.moneyclaims.service.gov.uk/oauth2/callback
         DYNATRACE_TAG: https://js-cdn.dynatrace.com/jstag/17177a07246/bf00910jpo/608d999956617ad0_complete.js
+        WEB_CHAT_CNBC_ENABLED: true
+        WEB_CHAT_CNBC_UUID: 'script_1191773643670e666a982030.90013235'
+        WEB_CHAT_CNBC_TENANT: 'aG1jdHN4MTAx'
+        WEB_CHAT_CNBC_CHANNEL: 'NBC_CNBC_Web_Chat'
+        WEB_CHAT_CNBC_CHANNEL_UUID: 'YFOOn2KASGSaEd96HY8-BA'
+        WEB_CHAT_CNBC_BUTTON_ID: '__8x8-chat-button-container-script_1191773643670e666a982030.90013235'
       spotInstances:
         enabled: false
