RWA-4073 config changes

--- a/apps/wa/wa-task-management-api/demo.yaml
+++ b/apps/wa/wa-task-management-api/demo.yaml
@@ -15,5 +15,6 @@ spec:
         ALLOWED_CASE_TYPES: asylum,wacasetype,sscs,civil,generalapplication,care_supervision_epo,prlapps,privatelaw_exceptionrecord,et_englandwales,et_scotland,benefit,criminalinjuriescompensation,financialremedycontested,financialremedymvp2,finrem_exceptionrecord,et_englandwales_multiple,et_scotland_multiple
         TASK_TYPE_CACHE_TIMEOUT_DURATION: 1
         SPRING_PROFILES_ACTIVE: "replica"
+        MANDATORY_TASK_FIELD_CHECK_ENABLED: true
       spotInstances:
         enabled: true
