--- a/apps/et/et-sya-api/demo.yaml
+++ b/apps/et/et-sya-api/demo.yaml
@@ -7,7 +7,7 @@ spec:
   releaseName: et-sya-api
   values:
     java:
-      image: hmctspublic.azurecr.io/et/sya-api:pr-1189-6e80047-20250116143407 #{"$imagepolicy": "flux-system:demo-et-sya-api"}
+      image: hmctspublic.azurecr.io/et/sya-api:pr-1189-6e80047-20250116143407 #{"$imagepolicy": "flux-system:et-sya-api"}
       environment:
         EXUI_CASE_DETAILS_URL: "https://manage-case.demo.platform.hmcts.net/cases/case-details/"
         AAC_URL: "http://aac-manage-case-assignment-demo.service.core-compute-demo.internal"
