--- a/apps/ccd/ccd-case-disposer/perftest.yaml
+++ b/apps/ccd/ccd-case-disposer/perftest.yaml
@@ -5,12 +5,14 @@ metadata:
 spec:
   values:
     job:
+      image: hmctspublic.azurecr.io/ccd/case-disposer:pr-729
       schedule: "*/15 * * * *"
       memoryRequests: "1024Mi"
       cpuRequests: "1000m"
       memoryLimits: "2048Mi"
       cpuLimits: "2000m"
       environment:
+        CCD_DISPOSER_LOG_LEVEL: "DEBUG"
         ELASTIC_SEARCH_ENABLED: true
         DATA_STORE_DB_PORT: 5432
         DATA_STORE_DB_OPTIONS: "?sslmode=require"
