--- a/apps/chart-tests/preview/base/kustomization.yaml
+++ b/apps/chart-tests/preview/base/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
   - ../sops-secrets
 namespace: chart-tests
 patches:
+  - path: ../../azure-service-operator/flexibleserver-postgres-config.yaml
   - path: ../../../money-claims/identity/aat.yaml
   - path: ../../../ccd/identity/aat.yaml
   - path: ../../../wa/identity/aat.yaml
