Fix max connections patch by using the correct owner

--- a/apps/chart-tests/azure-service-operator/flexibleserver-postgres-config.yaml
+++ b/apps/chart-tests/azure-service-operator/flexibleserver-postgres-config.yaml
@@ -7,7 +7,7 @@ metadata:
     serviceoperator.azure.com/reconcile-policy: detach-on-delete
 spec:
   owner:
-    name: ${NAMESPACE}-${ENVIRONMENT}
+    name: ${NAMESPACE}-flexibleserver-postgres-${ENVIRONMENT}
   azureName: max_connections
   source: user-override
   value: "4000"
