--- a/apps/chart-tests/azure-service-operator/aso.yaml
+++ b/apps/chart-tests/azure-service-operator/aso.yaml
@@ -46,7 +46,7 @@ spec:
     name: Standard
   zoneRedundant: false
 ---
-apiVersion: dbforpostgresql.azure.com/v1api20210601
+apiVersion: dbforpostgresql.azure.com/v1api20230601preview
 kind: FlexibleServer
 metadata:
   name: ${NAMESPACE}-flexibleserver-postgres-${ENVIRONMENT}
