--- a/apps/fis/fis-hmc-api/demo.yaml
+++ b/apps/fis/fis-hmc-api/demo.yaml
@@ -6,7 +6,7 @@ spec:
   releaseName: fis-hmc-api
   values:
     java:
-      image: hmctspublic.azurecr.io/fis/hmc-api:pr-337-1bf37d4-20250117145005 #{"$imagepolicy": "flux-system:test-demo-fis-hmc-api"}
+      image: hmctspublic.azurecr.io/fis/hmc-api:pr-337-1bf37d4-20250117145005 #{"$imagepolicy": "flux-system:demo-fis-hmc-api"}
       environment:
         DUMMY_VAR_TO_REDEPLOY: 2
       keyVaults:
