--- a/apps/idam/idam-hmcts-access/aat.yaml
+++ b/apps/idam/idam-hmcts-access/aat.yaml
@@ -9,3 +9,4 @@ spec:
     nodejs:
       environment:
         APP_URL: 'https://hmcts-access.aat.platform.hmcts.net'
+        HEALTH_IDAM_API_URL: http://idam-api
