--- a/apps/em/em-hrs-api/demo.yaml
+++ b/apps/em/em-hrs-api/demo.yaml
@@ -8,7 +8,7 @@ spec:
       image: hmctspublic.azurecr.io/em/hrs-api:prod-d062e21-20250120175603 #{"$imagepolicy": "flux-system:demo-em-hrs-api"}
       environment:
         LOGGING_LEVEL_UK_GOV_HMCTS_REFORM_EM_HRS: DEBUG
-        TTL_ENABLED: false
+        TTL_ENABLED: true
         # DELETE_CASE_ENDPOINT_ENABLED: true
         USE_AD_AUTH_FOR_SOURCE_BLOB_CONNECTION: true
         DELETE_CASE_S2S_WHITELIST: ccd_case_disposer,em_gw
