use hrs demo env

--- a/apps/em/em-hrs-api/demo.yaml
+++ b/apps/em/em-hrs-api/demo.yaml
@@ -10,7 +10,7 @@ spec:
         LOGGING_LEVEL_UK_GOV_HMCTS_REFORM_EM_HRS: DEBUG
         TTL_ENABLED: true
         # DELETE_CASE_ENDPOINT_ENABLED: true
-        USE_AD_AUTH_FOR_SOURCE_BLOB_CONNECTION: true
+        USE_AD_AUTH_FOR_SOURCE_BLOB_CONNECTION: false
         DELETE_CASE_S2S_WHITELIST: ccd_case_disposer,em_gw
       spotInstances:
         enabled: true
