--- a/apps/bsp/rpe-send-letter-service/demo.yaml
+++ b/apps/bsp/rpe-send-letter-service/demo.yaml
@@ -5,11 +5,11 @@ metadata:
 spec:
   values:
     java:
-      image: hmctspublic.azurecr.io/rpe/send-letter-service:pr-2667-25d75af-20241220140302
+      image: hmctspublic.azurecr.io/rpe/send-letter-service:pr-2667-6048e68-20250121134027
       environment:
         ENCRYPTION_ENABLED: false
         CIVIL_SERVICE_ENABLED: true
-        DELETE_OLD_LETTERS_CRON: 0 * * * 1-5
+        DELETE_OLD_LETTERS_CRON: 0 */20 * * * 1-5
         BATCH_SIZE: 1000
         CIVIL_GENERAL_APPLICATIONS_INTERVAL: 6 years
         CIVIL_SERVICE_INTERVAL: 6 years
