Revert IA services to deploy prod images

--- a/apps/ia/ia-bail-case-api/demo.yaml
+++ b/apps/ia/ia-bail-case-api/demo.yaml
@@ -5,9 +5,9 @@ metadata:
 spec:
   values:
     java:
-      image: hmctspublic.azurecr.io/ia/bail-case-api:pr-540-c40db09-20250117142206 #{"$imagepolicy": "flux-system:demo-ia-bail-case-api"}
+      image: hmctspublic.azurecr.io/ia/bail-case-api:prod-9bb7f03-20250110114848 #{"$imagepolicy": "flux-system:demo-ia-bail-case-api"}
       environment:
         COMMON_DATA_API: http://rd-commondata-api-demo.service.core-compute-demo.internal
         IA_HEARINGS_API_URL: http://ia-hearings-api-demo.service.core-compute-demo.internal/
         LOCATION_REF_DATA_URL: http://rd-location-ref-api-demo.service.core-compute-demo.internal
-        RESTART_PODS: "3"
+        RESTART_PODS: "yes"
