--- a/apps/em/em-hrs-ingestor/demo.yaml
+++ b/apps/em/em-hrs-ingestor/demo.yaml
@@ -14,6 +14,7 @@ spec:
         IDAM_API_URL: https://idam-api.demo.platform.hmcts.net
         USE_AD_AUTH_FOR_SOURCE_BLOB_CONNECTION: true
         VH_STORAGE_CONTAINER_NAME: recordings
+        MAX_FILES_TO_PROCESS: 500
       # Run every 30 minutes as demo is a single cluster
       spotInstances:
         enabled: true
