--- a/apps/em/em-hrs-ingestor/demo.yaml
+++ b/apps/em/em-hrs-ingestor/demo.yaml
@@ -9,7 +9,7 @@ spec:
       image: hmctspublic.azurecr.io/em/hrs-ingestor:prod-ee10b1b-20250120175628 #{"$imagepolicy": "flux-system:demo-em-hrs-ingestor"}
       environment:
         VH_PROCESS_BACK_TO_DAY: 2
-        VH_PROCESS: true
+        VH_PROCESS: false
         VH_LEASED_FOR_MINUTES: 10
         IDAM_API_URL: https://idam-api.demo.platform.hmcts.net
         MAX_FILES_TO_PROCESS: 500
