--- a/apps/sscs/sscs-tribunals-api/demo.yaml
+++ b/apps/sscs/sscs-tribunals-api/demo.yaml
@@ -52,6 +52,7 @@ spec:
         CASE_DOCUMENT_AM_URL: http://ccd-case-document-am-api-demo.service.core-compute-demo.internal
         TEST_PROPERTY: false
         TYA_EVIDENCE_SUBMISSION_INFO_LINK: https://www.track-benefit-appeal.service.gov.uk/evidence/appeal_id
+        SSCS_TRACK_YOUR_APPEAL_LINK: http://sscs-cor.demo.platform.hmcts.net/
         TRIBUNALS_HEARINGS_LISTENING_ENABLED: true
         HMC_HEARINGS_LISTENING_ENABLED: true
         ADJOURNMENT_ENABLED: true
