--- a/apps/idam/idam-api/ithc.yaml
+++ b/apps/idam/idam-api/ithc.yaml
@@ -47,6 +47,7 @@ spec:
         FEATUREFLAGS_V2_API_SERVICES_CONTROLLER_ENABLED: true
         FEATUREFLAGS_V2_API_USERS_CONTROLLER_ENABLED: true
         FEATUREFLAGS_SKIPARCHIVEDELETIONOFORIGINALRECORD: false
+        FEATUREFLAGS_ADDEMAILTONOTIFYREFERENCE: true
         IDAM_REGISTRATION_APPOINTDOMAINREGEX_0: idam\.sso
         IDAM_REGISTRATION_APPOINTDOMAINREGEX_1: ejudiciary\.net
         SPRING_JMS_SERVICEBUS_ENABLED: false
