--- a/apps/idam/idam-testing-support-api/demo.yaml
+++ b/apps/idam/idam-testing-support-api/demo.yaml
@@ -13,3 +13,4 @@ spec:
         SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWKSETURI: https://idam-web-public.demo.platform.hmcts.net/o/jwks
         SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_IDAMTESTINGSUPPORTAPI_TOKENURI: https://idam-web-public.demo.platform.hmcts.net/o/token
         CLEANUP_SESSION_LIFESPAN: 90d
+        FEATUREFLAGS_ADDEMAILTONOTIFYREFERENCE: true
