--- a/apps/idam/idam-testing-support-api/ithc.yaml
+++ b/apps/idam/idam-testing-support-api/ithc.yaml
@@ -13,3 +13,4 @@ spec:
         IDAM_API_URL: https://idam-api.ithc.platform.hmcts.net
         SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWKSETURI: https://idam-web-public.ithc.platform.hmcts.net/o/jwks
         SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_IDAMTESTINGSUPPORTAPI_TOKENURI: https://idam-web-public.ithc.platform.hmcts.net/o/token
+        FEATUREFLAGS_ADDEMAILTONOTIFYREFERENCE: true
