--- a/apps/idam/idam-testing-support-api/perftest.yaml
+++ b/apps/idam/idam-testing-support-api/perftest.yaml
@@ -14,3 +14,4 @@ spec:
         SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_IDAMTESTINGSUPPORTAPI_TOKENURI: https://idam-web-public.perftest.platform.hmcts.net/o/token
         CLEANUP_SESSION_LIFESPAN: 180d
         NOTIFY_MAXPAGES: 50
+        FEATUREFLAGS_ADDEMAILTONOTIFYREFERENCE: true
