--- a/apps/ccd/ccd-case-disposer/perftest.yaml
+++ b/apps/ccd/ccd-case-disposer/perftest.yaml
@@ -25,4 +25,4 @@ spec:
         LOG_AND_AUDIT_HOST: "http://lau-case-backend-perftest.service.core-compute-perftest.internal"
         DELETE_CASE_TYPES: "DPR_FT_MasterCaseType, CARE_SUPERVISION_EPO, GrantOfRepresentation"
         SIMULATED_CASE_TYPES:
-        CCD_DISPOSER_REQUEST_LIMIT: 1000000
+        CCD_DISPOSER_REQUEST_LIMIT: "1000000"
