--- a/apps/bsp/rpe-send-letter-service/demo.yaml
+++ b/apps/bsp/rpe-send-letter-service/demo.yaml
@@ -9,7 +9,7 @@ spec:
       environment:
         ENCRYPTION_ENABLED: false
         CIVIL_SERVICE_ENABLED: true
-        DELETE_OLD_LETTERS_CRON: 0 * * * * 1-5
+        DELETE_OLD_LETTERS_CRON: 0 0 * * * 1-5
         BATCH_SIZE: 1000
         CIVIL_GENERAL_APPLICATIONS_INTERVAL: 6 years
         CIVIL_SERVICE_INTERVAL: 6 years
