--- a/apps/probate/demo/base/kustomization.yaml
+++ b/apps/probate/demo/base/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - ../../probate-cron-reactivate-dormant-cases/probate-cron-reactivate-dormant-cases.yaml
   - ../../probate-cron-hmrc-extract/probate-cron-hmrc-extract.yaml
   - ../../probate-cron-iron-mountain-extract/probate-cron-iron-mountain-extract.yaml
+  - ../../probate-cron-exela-extract/probate-cron-exela-extract.yaml
   - ../../probate-cron-ccd-data-migration-tool/probate-cron-ccd-data-migration-tool.yaml
   - ../../probate-cron-smee-and-ford-extract/probate-cron-smee-and-ford-extract.yaml
   - ../../../rbac/nonprod-role.yaml
@@ -24,5 +25,6 @@ patches:
   - path: ../../probate-cron-smee-and-ford-extract/demo/demo.yaml
   - path: ../../probate-cron-ccd-data-migration-tool/demo/demo.yaml
   - path: ../../probate-cron-iron-mountain-extract/demo/demo.yaml
+  - path: ../../probate-cron-exela-extract/demo/demo.yaml
   - path: ../../identity/demo.yaml
   - path: ../../serviceaccount/demo.yaml
