--- a/apps/probate/probate-cron-grant-awaiting-documentation-extract/demo/demo.yaml
+++ b/apps/probate/probate-cron-grant-awaiting-documentation-extract/demo/demo.yaml
@@ -1,13 +1,13 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: probate-cron-exela-extract
+  name: probate-cron-grant-awaiting-documentation-extract
 spec:
-  releaseName: probate-cron-exela-extract
+  releaseName: probate-cron-grant-awaiting-documentation-extract
   values:
     job:
       image: hmctspublic.azurecr.io/probate/back-office:pr-2897-8ad23f9-20250115094341 #{"$imagepolicy": "flux-system:demo-probate-back-office"}
-      schedule: "5 2 * * *"
+      schedule: "20 2 31 2 *"
       environment:
         TRIG: trig-1
     global:
