--- a/apps/fees-pay/ccpay-refunds-api/demo-int-image-policy.yaml
+++ b/apps/fees-pay/ccpay-refunds-api/demo-int-image-policy.yaml
@@ -2,6 +2,14 @@ apiVersion: image.toolkit.fluxcd.io/v1beta1
 kind: ImagePolicy
 metadata:
   name: demo-int-ccpay-refunds-api
+  annotations:
+    hmcts.github.com/prod-automated: disable
 spec:
+  filterTags:
+    pattern: '^pr-711-[a-f0-9]+-(?P<ts>[0-9]+)'
+    extract: '$ts'
+  policy:
+    alphabetical:
+      order: asc
   imageRepositoryRef:
     name: ccpay-refunds-api
