--- a/apps/reform-scan/reform-scan-blob-router/prod.yaml
+++ b/apps/reform-scan/reform-scan-blob-router/prod.yaml
@@ -18,4 +18,4 @@ spec:
         CREATE_RECONCILIATION_SUMMARY_REPORT_ENABLED: "true"
         CREATE_RECONCILIATION_DETAILED_REPORT_ENABLED: "true"
         SEND_RECONCILIATION_REPORT_MAIL_ENABLED: "true"
-        CRIME_ENABLED: true
+        CRIME_ENABLED: false
