ET TTL AAT Migration

--- a/apps/et/et-ccd-case-migration/aat-00.yaml
+++ b/apps/et/et-ccd-case-migration/aat-00.yaml
@@ -5,8 +5,8 @@ metadata:
 spec:
   values:
     job:
-      suspend: true
-      schedule: "*/15 * * * *"
+      suspend: false
+      schedule: "*/10 * * * *"
       environment:
         CCD_DATA_STORE_API_BASE_URL: http://ccd-data-store-api-aat.service.core-compute-aat.internal
         IDAM_API_URL: https://idam-api.aat.platform.hmcts.net
@@ -15,9 +15,9 @@ spec:
         IDAM_S2S_URL: http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
         IDAM_CLIENT_REDIRECT_URI: https://et-cos-aat.service.core-compute-aat.internal/oauth2redirect
         MIGRATION_ROLLBACK: false
-        MIGRATION_QUERY_SIZE: 1500
-        MIGRATION_CASE_LIMIT: 3000
-        MIGRATION_CASETYPE: Leeds
+        MIGRATION_QUERY_SIZE: 5000
+        MIGRATION_CASE_LIMIT: 5000
+        MIGRATION_CASETYPE: ET_Scotland
     global:
       environment: aat
       enableKeyVaults: true
