--- a/apps/et/et-ccd-case-migration/aat-01.yaml
+++ b/apps/et/et-ccd-case-migration/aat-01.yaml
@@ -5,8 +5,8 @@ metadata:
 spec:
   values:
     job:
-      suspend: true
-      schedule: "*/30 * * * *"
+      suspend: false
+      schedule: "*/10 * * * *"
       environment:
         CCD_DATA_STORE_API_BASE_URL: http://ccd-data-store-api-aat.service.core-compute-aat.internal
         IDAM_API_URL: https://idam-api.aat.platform.hmcts.net
@@ -14,10 +14,10 @@ spec:
         OIDC_ISSUER: https://forgerock-am.service.core-compute-idam-aat.internal:8443/openam/oauth2/hmcts
         IDAM_S2S_URL: http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
         IDAM_CLIENT_REDIRECT_URI: https://et-cos-aat.service.core-compute-aat.internal/oauth2redirect
-        MIGRATION_ROLLBACK: true
+        MIGRATION_ROLLBACK: false
         MIGRATION_QUERY_SIZE: 5000
-        MIGRATION_CASE_LIMIT: 500
-        MIGRATION_CASETYPE: Leeds
+        MIGRATION_CASE_LIMIT: 5000
+        MIGRATION_CASETYPE: ET_EnglandWales
     global:
       environment: aat
       enableKeyVaults: true
