--- a/apps/et/et-ccd-case-migration/aat-00.yaml
+++ b/apps/et/et-ccd-case-migration/aat-00.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   values:
     job:
-      suspend: false
+      suspend: true
       schedule: "*/10 * * * *"
       environment:
         CCD_DATA_STORE_API_BASE_URL: http://ccd-data-store-api-aat.service.core-compute-aat.internal
