--- a/apps/xui/xui-webapp-integration1/demo.yaml
+++ b/apps/xui/xui-webapp-integration1/demo.yaml
@@ -7,14 +7,14 @@ spec:
     nodejs:
       ingressHost: manage-case-int1.demo.platform.hmcts.net
       environment:
-        DUMMY_VAR: 2
+        DUMMY_VAR: 1
         FEATURE_SECURE_COOKIE_ENABLED: false
         FEATURE_JRD_E_LINKS_V2_ENABLED: true
         SERVICES_MARKUP_API: http://em-npa-demo.service.core-compute-demo.internal
         JURISDICTIONS: DIVORCE,PROBATE,FR,PUBLICLAW,IA,SSCS,EMPLOYMENT,CIVIL,AUTOTEST1,CMC,HRS,BEFTA_JURISDICTION_1,PRIVATELAW,BEFTA_JURISDICTION_2,BEFTA_JURISDICTION_3
         HEARINGS_JURISDICTIONS: SSCS,PRIVATELAW,CIVIL,IA,EMPLOYMENT,ST_CIC
         FEATURE_OIDC_ENABLED: true
-        SERVICES_IDAM_ISS_URL: https://forgerock-am.service.core-compute-idam-demo.internal:8443/openam/oauth2/realms/root/realms/hmcts
+        SERVICES_IDAM_ISS_URL: https://idam-web-public.demo.platform.hmcts.net/o
         DEBUG: xuiNode:*
         SERVICES_IDAM_OAUTH_CALLBACK_URL: oauth2/callback
         STUB: false
