Disable sscs tribs deployment ID in AAT

--- a/apps/sscs/sscs-tribunals-api/aat.yaml
+++ b/apps/sscs/sscs-tribunals-api/aat.yaml
@@ -50,9 +50,9 @@ spec:
         TRIBUNALS_HEARINGS_LISTENING_ENABLED: true
         HMC_HEARINGS_LISTENING_ENABLED: true
         ADJOURNMENT_ENABLED: true
-        HMC_DEPLOYMENT_FILTER_ENABLED: true
+        HMC_DEPLOYMENT_FILTER_ENABLED: false
         AMQP_RECONNECT_ON_EXCEPTION: true
-        HMC_DEPLOYMENT_ID: "deployment-sscs-tribunals-api-aat"
+        # HMC_DEPLOYMENT_ID: "deployment-sscs-tribunals-api-aat"
         # START - SSCS-IB RELEASE VARIABLES
         INFECTED_BLOOD_COMPENSATION_ENABLED: true
         BUNDLE_ENGLISH_CONFIG: sscs-ib-bundle-config.yaml
