--- a/apps/bsp/rpe-send-letter-service/demo.yaml
+++ b/apps/bsp/rpe-send-letter-service/demo.yaml
@@ -9,8 +9,8 @@ spec:
       environment:
         ENCRYPTION_ENABLED: false
         CIVIL_SERVICE_ENABLED: true
-        DELETE_OLD_LETTERS_CRON: 0 0 * * * 1-5
-        BATCH_SIZE: 1000
+        DELETE_OLD_LETTERS_CRON: 0 0/30 * ? * 1-5
+        BATCH_SIZE: 5000
         CIVIL_GENERAL_APPLICATIONS_INTERVAL: 6 years
         CIVIL_SERVICE_INTERVAL: 6 years
         CMC_CLAIM_STORE_INTERVAL: 2 years
