updating images to point towards ibca config

--- a/apps/bsp/bulk-scan-processor/demo.yaml
+++ b/apps/bsp/bulk-scan-processor/demo.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   values:
     java:
+      image: hmctspublic.azurecr.io/bulk-scan/processor:pr-3374-7d9b8ae-20250122121059
       environment:
         #60 days in seconds
         SAS_TOKEN_VALIDITY: "5184000"
