ET TTL Demo Migration

--- a/apps/et/et-ccd-case-migration/demo-00.yaml
+++ b/apps/et/et-ccd-case-migration/demo-00.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   values:
     job:
-      suspend: false
+      suspend: true
       schedule: "*/10 * * * *"
       image: hmctspublic.azurecr.io/et/migration:prod-d9dba46-20250120124925 #{"$imagepolicy": "flux-system:et-ccd-case-migration"}
       environment:
