--- a/apps/civil/civil-general-applications/prod.yaml
+++ b/apps/civil/civil-general-applications/prod.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   values:
     java:
+      image: hmctspublic.azurecr.io/civil/general-applications:prod-d3ea92d-20250123093303 #{"$imagepolicy": "flux-system:civil-general-applications"}
       replicas: 4
       autoscaling:
         maxReplicas: 8
