--- a/apps/probate/demo/base/kustomization.yaml
+++ b/apps/probate/demo/base/kustomization.yaml
@@ -7,6 +7,8 @@ resources:
   - ../../probate-cron-hmrc-extract/probate-cron-hmrc-extract.yaml
   - ../../probate-cron-iron-mountain-extract/probate-cron-iron-mountain-extract.yaml
   - ../../probate-cron-exela-extract/probate-cron-exela-extract.yaml
+  - ../../probate-cron-grant-delayed-extract/probate-cron-grant-delayed-extract.yaml
+  - ../../probate-cron-grant-awaiting-documentation-extract/probate-cron-grant-awaiting-documentation-extract.yaml
   - ../../probate-cron-ccd-data-migration-tool/probate-cron-ccd-data-migration-tool.yaml
   - ../../probate-cron-smee-and-ford-extract/probate-cron-smee-and-ford-extract.yaml
   - ../../../rbac/nonprod-role.yaml
@@ -26,5 +28,7 @@ patches:
   - path: ../../probate-cron-ccd-data-migration-tool/demo/demo.yaml
   - path: ../../probate-cron-iron-mountain-extract/demo/demo.yaml
   - path: ../../probate-cron-exela-extract/demo/demo.yaml
+  - path: ../../probate-cron-grant-delayed-extract/demo/demo.yaml
+  - path: ../../probate-cron-grant-awaiting-documentation-extract/demo/demo.yaml
   - path: ../../identity/demo.yaml
   - path: ../../serviceaccount/demo.yaml
