--- a/apps/ccd/ccd-case-disposer/perftest.yaml
+++ b/apps/ccd/ccd-case-disposer/perftest.yaml
@@ -23,6 +23,6 @@ spec:
         DOCUMENT_STORE_HOST: "http://dm-store-perftest.service.core-compute-perftest.internal"
         DEFINITION_STORE_HOST: "http://ccd-definition-store-api-perftest.service.core-compute-perftest.internal"
         LOG_AND_AUDIT_HOST: "http://lau-case-backend-perftest.service.core-compute-perftest.internal"
-        DELETE_CASE_TYPES: "DPR_FT_MasterCaseType, CARE_SUPERVISION_EPO, GrantOfRepresentation"
+        DELETE_CASE_TYPES: "DPR_FT_MasterCaseType, A58, CARE_SUPERVISION_EPO, GrantOfRepresentation, ET_EnglandWales, Asylum, Bail, NFD"
         SIMULATED_CASE_TYPES:
         CCD_DISPOSER_REQUEST_LIMIT: "1000000"
