--- a/apps/xui/xui-webapp-integration2/demo.yaml
+++ b/apps/xui/xui-webapp-integration2/demo.yaml
@@ -7,7 +7,7 @@ spec:
     nodejs:
       ingressHost: manage-case-int2.demo.platform.hmcts.net
       environment:
-        DUMMY_VAR_FOR_RESTART: 2
+        DUMMY_VAR_FOR_RESTART: 1
         FEATURE_SECURE_COOKIE_ENABLED: false
         FEATURE_JRD_E_LINKS_V2_ENABLED: true
         SERVICES_MARKUP_API: http://em-npa-demo.service.core-compute-demo.internal
@@ -15,6 +15,7 @@ spec:
         HEARINGS_JURISDICTIONS: SSCS,PRIVATELAW,CIVIL,IA,EMPLOYMENT,ST_CIC
         FEATURE_OIDC_ENABLED: true
         DEBUG: xuiNode:*
+        SERVICES_IDAM_ISS_URL: https://forgerock-am.service.core-compute-idam-demo.internal:8443/openam/oauth2/realms/root/realms/hmcts
         SERVICES_IDAM_OAUTH_CALLBACK_URL: oauth2/callback
         STUB: false
         SERVICES_CCD_CASE_ASSIGNMENT_API: http://aac-manage-case-assignment-demo.service.core-compute-demo.internal
@@ -40,5 +41,5 @@ spec:
         MC_BASE_URL: https://manage-case-int2.demo.platform.hmcts.net
         SERVICES_TRANSLATION_API_URL: http://ts-translation-service-demo.service.core-compute-demo.internal
         SERVICES_PAYMENTS_URL: http://payment-api-demo.service.core-compute-demo.internal
-        SERVICES_IDAM_SERVICE_OVERRIDE: true
+        SERVICES_IDAM_SERVICE_OVERRIDE: false
       image: hmctspublic.azurecr.io/xui/webapp:pr-4162-5e4b5ba-20250125193332 #{"$imagepolicy": "flux-system:demo-xui-webapp-integration2"}
