pr-4162 int2-demo-override-true test with ISS url removed and added the services-idam-client-id property.

--- a/apps/xui/xui-webapp-integration2/demo.yaml
+++ b/apps/xui/xui-webapp-integration2/demo.yaml
@@ -41,4 +41,5 @@ spec:
         SERVICES_TRANSLATION_API_URL: http://ts-translation-service-demo.service.core-compute-demo.internal
         SERVICES_PAYMENTS_URL: http://payment-api-demo.service.core-compute-demo.internal
         SERVICES_IDAM_SERVICE_OVERRIDE: true
+        SERVICES_IDAM_CLIENT_ID: xuiwebapp_passport_0_7
       image: hmctspublic.azurecr.io/xui/webapp:pr-4162-724cfe4-20250127084227 #{"$imagepolicy": "flux-system:demo-xui-webapp-integration2"}
