Update aat.yaml to point to PR 723

--- a/apps/ccd/ccd-case-disposer/aat.yaml
+++ b/apps/ccd/ccd-case-disposer/aat.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   values:
     job:
+      image: hmctspublic.azurecr.io/ccd/case-disposer:pr-723
       schedule: "0/15 * * * *"
       environment:
         ELASTIC_SEARCH_ENABLED: true
