--- a/apps/ccd/ccd-case-disposer/demo.yaml
+++ b/apps/ccd/ccd-case-disposer/demo.yaml
@@ -19,4 +19,4 @@ spec:
         LOG_AND_AUDIT_HOST: "http://lau-case-backend-demo.service.core-compute-demo.internal"
         CASE_DISPOSER_SUMMARY_LOG_SIZE: 10
         DELETE_CASE_TYPES: "DPR_FT_CaseFileView,MoneyClaimCase"
-        SIMULATED_CASE_TYPES: "DPR_FT_MasterCaseType, DPR_FT_MultiplePages, DPR_FT_CaseFileView_2"
+        SIMULATED_CASE_TYPES: "DPR_FT_MasterCaseType, DPR_FT_MultiplePages, DPR_FT_CaseFileView_2, ET_EnglandWales, ET_Scotland"
