CRF-12: Deploy pull request image to demo
Add configuration to deploy civil-rtl-export pull request 149 image to demo environment.

--- a/apps/civil/demo/base/kustomization.yaml
+++ b/apps/civil/demo/base/kustomization.yaml
@@ -19,3 +19,4 @@ patches:
   - path: ../../civil-general-applications/demo.yaml
   - path: ../../serviceaccount/demo.yaml
   - path: ../../civil-sdt-gateway/demo.yaml
+  - path: ../../civil-rtl-export/demo.yaml
