--- a/apps/civil/automation/kustomization.yaml
+++ b/apps/civil/automation/kustomization.yaml
@@ -28,3 +28,4 @@ resources:
   - ../civil-sdt/aat-image-policy.yaml
   - ../civil-rtl-export/image-repo.yaml
   - ../civil-rtl-export/image-policy.yaml
+  - ../civil-rtl-export/demo-image-policy.yaml
