--- a/apps/ccd/ccd-case-disposer/perftest.yaml
+++ b/apps/ccd/ccd-case-disposer/perftest.yaml
@@ -6,7 +6,7 @@ spec:
   values:
     job:
       image: hmctspublic.azurecr.io/ccd/case-disposer:pr-729
-      schedule: "0 * * * *"
+      schedule: "*/30 * * * *"
       memoryRequests: "1024Mi"
       cpuRequests: "1000m"
       memoryLimits: "2048Mi"
