Update demo.yaml to delete the ET cases while pointing to PR 723

--- a/apps/ccd/ccd-case-disposer/demo.yaml
+++ b/apps/ccd/ccd-case-disposer/demo.yaml
@@ -18,5 +18,5 @@ spec:
         DOCUMENT_STORE_HOST: "http://dm-store-demo.service.core-compute-demo.internal"
         DEFINITION_STORE_HOST: "http://ccd-definition-store-api-demo.service.core-compute-demo.internal"
         LOG_AND_AUDIT_HOST: "http://lau-case-backend-demo.service.core-compute-demo.internal"
-        DELETE_CASE_TYPES: "DPR_FT_CaseFileView,MoneyClaimCase"
-        SIMULATED_CASE_TYPES: "DPR_FT_MasterCaseType, DPR_FT_MultiplePages, DPR_FT_CaseFileView_2, ET_EnglandWales, ET_Scotland"
+        DELETE_CASE_TYPES: "DPR_FT_CaseFileView,MoneyClaimCase,ET_EnglandWales,ET_Scotland"
+        SIMULATED_CASE_TYPES: "DPR_FT_MasterCaseType, DPR_FT_MultiplePages, DPR_FT_CaseFileView_2"
