--- a/apps/ccd/ccd-case-disposer/demo.yaml
+++ b/apps/ccd/ccd-case-disposer/demo.yaml
@@ -5,7 +5,6 @@ metadata:
 spec:
   values:
     job:
-      image: hmctspublic.azurecr.io/ccd/case-disposer:pr-723
       schedule: "0/15 * * * *"
       environment:
         ELASTIC_SEARCH_ENABLED: true
@@ -18,5 +17,6 @@ spec:
         DOCUMENT_STORE_HOST: "http://dm-store-demo.service.core-compute-demo.internal"
         DEFINITION_STORE_HOST: "http://ccd-definition-store-api-demo.service.core-compute-demo.internal"
         LOG_AND_AUDIT_HOST: "http://lau-case-backend-demo.service.core-compute-demo.internal"
-        DELETE_CASE_TYPES: "DPR_FT_CaseFileView,MoneyClaimCase,ET_EnglandWales,ET_Scotland"
+        CASE_DISPOSER_SUMMARY_LOG_SIZE: 10
+        DELETE_CASE_TYPES: "DPR_FT_CaseFileView,MoneyClaimCase"
         SIMULATED_CASE_TYPES: "DPR_FT_MasterCaseType, DPR_FT_MultiplePages, DPR_FT_CaseFileView_2"
