--- a/apps/docmosis/docmosis/perftest.yaml
+++ b/apps/docmosis/docmosis/perftest.yaml
@@ -6,10 +6,10 @@ spec:
   values:
     replicas: 3
     ingressHost: docmosis.perftest.platform.hmcts.net
-    image: hmctsprivatetemp.azurecr.io/docmosis:perftest-01c9f2b-737395 #{"$imagepolicy": "flux-system:perftest-docmosis"}
+    image: hmctsprivate.azurecr.io/docmosis:perftest-01c9f2b-737395 #{"$imagepolicy": "flux-system:perftest-docmosis"}
     java:
-      memoryRequests: "4Gi"
-      memoryLimits: "5Gi"
+      memoryRequests: '4Gi'
+      memoryLimits: '5Gi'
       keyVaults:
         docmosis-infra:
           secrets:
