--- a/apps/sscs/sscs-tribunals-api/aat.yaml
+++ b/apps/sscs/sscs-tribunals-api/aat.yaml
@@ -43,6 +43,9 @@ spec:
         JOB_SCHEDULER_DB_NAME: notification
         JOB_SCHEDULER_DB_HOST: sscs-tya-notif-postgres-v15-db-aat.postgres.database.azure.com
         SSCS_TRACK_YOUR_APPEAL_LINK: http://sscs-cor.aat.platform.hmcts.net/trackyourappeal/appeal_id
+        MYA_LINK: http://sscs-cor.aat.platform.hmcts.net/trackyourappeal/appeal_id
+        ONLINE_HEARING_LINK: "http://sscs-cor.aat.platform.hmcts.net"
+        SSCS_MANAGE_EMAILS_LINK: http://sscs-cor.aat.platform.hmcts.net/manage-email-notifications/mac
         HOURS_START_TIME: 0
         HOURS_END_TIME: 21
         COVID_19_NOTIFICATION_FEATURE: false
@@ -54,7 +57,7 @@ spec:
         AMQP_RECONNECT_ON_EXCEPTION: true
         # HMC_DEPLOYMENT_ID: "deployment-sscs-tribunals-api-aat"
         # START - SSCS-IB RELEASE VARIABLES
-        INFECTED_BLOOD_COMPENSATION_ENABLED: true
+        INFECTED_BLOOD_COMPENSATION_ENABLED: true        
         BUNDLE_ENGLISH_CONFIG: sscs-ib-bundle-config.yaml
         BUNDLE_EDITED_CONFIG: sscs-ib-bundle-edited-config.yaml
         DOCUMENTS_ENGLISH_DIRECTION_ISSUED: TB-SCS-GNO-ENG-directions-notice-v2.docx
