--- a/apps/neuvector/neuvector/ptl-intsvc/ptl-intsvc.yaml
+++ b/apps/neuvector/neuvector/ptl-intsvc/ptl-intsvc.yaml
@@ -45,7 +45,7 @@ spec:
   chart:
     spec:
       chart: neuvector-azure-keyvault
-      version: 1.5.17-alpha
+      version: 1.5.8
       sourceRef:
         kind: HelmRepository
         name: hmctspublic
