Update neuvector repo

--- a/apps/neuvector/neuvector/ithc/ithc.yaml
+++ b/apps/neuvector/neuvector/ithc/ithc.yaml
@@ -23,8 +23,8 @@ spec:
   chart:
     spec:
       chart: neuvector-azure-keyvault
-      version: 1.5.17
+      version: 1.5.17-alpha
       sourceRef:
         kind: HelmRepository
-        name: hmctspublic
+        name: hmctspublic-oci
         namespace: flux-system
