--- a/apps/private-law/prl-cos/perftest.yaml
+++ b/apps/private-law/prl-cos/perftest.yaml
@@ -94,7 +94,7 @@ spec:
         COMMON_DATA_API: http://rd-commondata-api-perftest.service.core-compute-perftest.internal
         SEND_LETTER_URL: http://rpe-send-letter-service-perftest.service.core-compute-perftest.internal
         APP_ENV: "perftest"
-        JAVA_TOOL_OPTIONS: -XX:InitialRAMPercentage=30.0 -XX:MaxRAMPercentage=65.0 -XX:MinRAMPercentage=30.0 -Dfile.encoding=UTF-8 $JAVA_OPTS $JAVA_AGENT_OPTIONS
+        JAVA_TOOL_OPTIONS: -XX:InitialRAMPercentage=30.0 -XX:MaxRAMPercentage=65.0 -XX:MinRAMPercentage=30.0 -javaagent:/opt/app/applicationinsights-agent-3.2.6.jar -Dfile.encoding=UTF-8
     global:
       environment: perftest
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
