--- a/apps/fees-pay/ccpay-refunds-api/demo-int-image-policy.yaml
+++ b/apps/fees-pay/ccpay-refunds-api/demo-int-image-policy.yaml
@@ -3,7 +3,7 @@ kind: ImagePolicy
 metadata:
   name: demo-int-ccpay-refunds-api
   annotations:
-    hmcts.github.com/prod-automated: disable
+    hmcts.github.com/prod-automated: disabled
 spec:
   filterTags:
     pattern: '^pr-711-[a-f0-9]+-(?P<ts>[0-9]+)'
