--- a/apps/neuvector/neuvector/neuvector.yaml
+++ b/apps/neuvector/neuvector/neuvector.yaml
@@ -66,8 +66,8 @@ spec:
   chart:
     spec:
       chart: neuvector-azure-keyvault
-      version: 1.5.8
+      version: 1.5.17
       sourceRef:
         kind: HelmRepository
-        name: hmctspublic
+        name: hmctspublic-oci
         namespace: flux-system
