--- a/apps/neuvector/neuvector/ithc/ithc.yaml
+++ b/apps/neuvector/neuvector/ithc/ithc.yaml
@@ -23,7 +23,7 @@ spec:
   chart:
     spec:
       chart: neuvector-azure-keyvault
-      version: 1.5.17-alpha
+      version: 1.5.17
       sourceRef:
         kind: HelmRepository
         name: hmctspublic-oci
