--- a/apps/xui/xui-webapp-integration2/demo.yaml
+++ b/apps/xui/xui-webapp-integration2/demo.yaml
@@ -7,7 +7,7 @@ spec:
     nodejs:
       ingressHost: manage-case-int2.demo.platform.hmcts.net
       environment:
-        DUMMY_VAR_FOR_RESTART: 2
+        DUMMY_VAR_FOR_RESTART: 1
         FEATURE_SECURE_COOKIE_ENABLED: false
         FEATURE_JRD_E_LINKS_V2_ENABLED: true
         SERVICES_MARKUP_API: http://em-npa-demo.service.core-compute-demo.internal
@@ -15,6 +15,7 @@ spec:
         HEARINGS_JURISDICTIONS: SSCS,PRIVATELAW,CIVIL,IA,EMPLOYMENT,ST_CIC
         FEATURE_OIDC_ENABLED: true
         DEBUG: xuiNode:*
+        SERVICES_IDAM_ISS_URL: https://forgerock-am.service.core-compute-idam-demo.internal:8443/openam/oauth2/realms/root/realms/hmcts
         SERVICES_IDAM_OAUTH_CALLBACK_URL: oauth2/callback
         STUB: false
         SERVICES_CCD_CASE_ASSIGNMENT_API: http://aac-manage-case-assignment-demo.service.core-compute-demo.internal
