Get lower envs pointing at hmctsprivatetemp to fix while we talk to msft

--- a/apps/camunda/camunda-api/ithc.yaml
+++ b/apps/camunda/camunda-api/ithc.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   values:
     java:
+      image: hmctsprivatetemp.azurecr.io/camunda/bpm:prod-700cced-20250123072402
       environment:
         WA_AUTO_CONFIGURE_TASKS_ENABLED: false
         DUMMY_REDEPLOY_VAR: false
