--- a/apps/camunda/camunda-api/aat.yaml
+++ b/apps/camunda/camunda-api/aat.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   values:
     java:
+      image: hmctsprivatetemp.azurecr.io/camunda/bpm:prod-700cced-20250123072402
       environment:
         WA_AUTO_CONFIGURE_TASKS_ENABLED: false
         LOGGING_LEVEL_COM_ZAXXER_HIKARI_HIKARICONFIG: DEBUG
