--- a/apps/camunda/camunda-api/perftest.yaml
+++ b/apps/camunda/camunda-api/perftest.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   values:
     java:
-      image: hmctsprivate.azurecr.io/camunda/bpm:prod-700cced-20250123072402 #{"$imagepolicy": "flux-system:perftest-camunda"}
+      image: hmctsprivatetemp.azurecr.io/camunda/bpm:prod-700cced-20250123072402
       memoryRequests: '2Gi'
       memoryLimits: '4Gi'
       cpuRequests: '1'
