--- a/apps/docmosis/docmosis/perftest.yaml
+++ b/apps/docmosis/docmosis/perftest.yaml
@@ -6,7 +6,7 @@ spec:
   values:
     replicas: 3
     ingressHost: docmosis.perftest.platform.hmcts.net
-    image: hmctsprivate.azurecr.io/docmosis:perftest-01c9f2b-737395 #{"$imagepolicy": "flux-system:perftest-docmosis"}
+    image: hmctsprivatetemp.azurecr.io/docmosis:perftest-01c9f2b-737395
     java:
       memoryRequests: '4Gi'
       memoryLimits: '5Gi'
