--- a/apps/docmosis/docmosis/sbox.yaml
+++ b/apps/docmosis/docmosis/sbox.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   values:
     ingressHost: docmosis.sandbox.platform.hmcts.net
-    image: hmctsprivate.azurecr.io/docmosis:sandbox-01c9f2b-737395 #{"$imagepolicy": "flux-system:sandbox-docmosis"}
+    image: hmctsprivatetemp.azurecr.io/docmosis:sandbox-01c9f2b-737395
     environment:
       DOCMOSIS_RENDER_USEURL: https://docmosis.sandbox.platform.hmcts.net
       DOCMOSIS_TORNADO_RENDER_USEURL: https://docmosis.sandbox.platform.hmcts.net
