--- a/apps/camunda/camunda-ui/perftest.yaml
+++ b/apps/camunda/camunda-ui/perftest.yaml
@@ -5,4 +5,5 @@ metadata:
 spec:
   values:
     java:
+      image: hmctsprivatetemp.azurecr.io/camunda/bpm:prod-700cced-20250123072402
       ingressClass: traefik
