--- a/apps/fis/fis-hmc-api/perftest-image-policy.yaml
+++ b/apps/fis/fis-hmc-api/perftest-image-policy.yaml
@@ -2,6 +2,14 @@ apiVersion: image.toolkit.fluxcd.io/v1beta1
 kind: ImagePolicy
 metadata:
   name: perftest-fis-hmc-api
+  annotations:
+    hmcts.github.com/prod-automated: disabled
 spec:
   imageRepositoryRef:
     name: fis-hmc-api
+  filterTags:
+    pattern: '^pr-495-[a-f0-9]+-(?P<ts>[0-9]+)'
+    extract: '$ts'
+  policy:
+    alphabetical:
+      order: asc
