--- a/apps/camunda/camunda-ui/camunda-ui.yaml
+++ b/apps/camunda/camunda-ui/camunda-ui.yaml
@@ -8,7 +8,7 @@ spec:
     java:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctsprivate.azurecr.io/camunda/bpm:prod-700cced-20250123072402 #{"$imagepolicy": "flux-system:camunda"}
+      image: hmctsprivatetemp.azurecr.io/camunda/bpm:prod-700cced-20250123072402 #{"$imagepolicy": "flux-system:camunda"}
       ingressHost: camunda-bpm.{{ .Values.global.environment }}.platform.hmcts.net
       ingressSessionAffinity:
         enabled: true
