Patching to AAT envronment

--- a/apps/camunda/aat/base/kustomization.yaml
+++ b/apps/camunda/aat/base/kustomization.yaml
@@ -6,4 +6,5 @@ resources:
   - ../../../base/slack-provider/aat
 patches:
   - path: ../../camunda-api/aat.yaml
+  - path: ../../camunda-ui/aat.yaml
   - path: ../../serviceaccount/aat.yaml
