Switch image automation to temp acr

--- a/apps/docmosis/docmosis/image-repo.yaml
+++ b/apps/docmosis/docmosis/image-repo.yaml
@@ -3,6 +3,6 @@ kind: ImageRepository
 metadata:
   name: docmosis
   annotations:
-    hmcts.github.com/image-registry: hmctsprivate
+    hmcts.github.com/image-registry: hmctsprivatetemp
 spec:
-  image: hmctsprivate.azurecr.io/docmosis
+  image: hmctsprivatetemp.azurecr.io/docmosis
