--- a/apps/sscs/sscs-tribunals-api/demo.yaml
+++ b/apps/sscs/sscs-tribunals-api/demo.yaml
@@ -6,7 +6,8 @@ metadata:
 spec:
   values:
     java:
-      image: hmctspublic.azurecr.io/sscs/tribunals-api:prod-e266fc6-20250130111625 #{"$imagepolicy": "flux-system:demo-sscs-tribunals-api"}
+      #image: hmctspublic.azurecr.io/sscs/tribunals-api:prod-e266fc6-20250130111625 #{"$imagepolicy": "flux-system:demo-sscs-tribunals-api"}
+      image: hmctspublic.azurecr.io/sscs/tribunals-api:prod-e266fc6-20250130111625
       aadIdentityName: sscs
       spotInstances:
         enabled: true
