--- a/apps/sscs/sscs-tribunals-api/demo.yaml
+++ b/apps/sscs/sscs-tribunals-api/demo.yaml
@@ -6,8 +6,7 @@ metadata:
 spec:
   values:
     java:
-      #image: hmctspublic.azurecr.io/sscs/tribunals-api:prod-e266fc6-20250130111625 #{"$imagepolicy": "flux-system:demo-sscs-tribunals-api"}
-      image: hmctspublic.azurecr.io/sscs/tribunals-api:prod-e266fc6-20250130111625
+      image: hmctspublic.azurecr.io/sscs/tribunals-api:pr-4350-4d4f6fa-20250130115842 #{"$imagepolicy": "flux-system:demo-sscs-tribunals-api"}
       aadIdentityName: sscs
       spotInstances:
         enabled: true
