--- a/apps/sscs/sscs-tribunals-api/aat.yaml
+++ b/apps/sscs/sscs-tribunals-api/aat.yaml
@@ -42,8 +42,8 @@ spec:
         JOB_SCHEDULER_DB_USERNAME: pgadmin
         JOB_SCHEDULER_DB_NAME: notification
         JOB_SCHEDULER_DB_HOST: sscs-tya-notif-postgres-v15-db-aat.postgres.database.azure.com
-        SSCS_TRACK_YOUR_APPEAL_LINK: http://sscs-cor.aat.platform.hmcts.net/trackyourappeal/appeal_id
-        MYA_LINK: http://sscs-cor.aat.platform.hmcts.net/trackyourappeal/appeal_id
+        SSCS_TRACK_YOUR_APPEAL_LINK: http://sscs-cor.aat.platform.hmcts.net/sign-ign?tya=appeal_id
+        MYA_LINK: http://sscs-cor.aat.platform.hmcts.net/sign-ign?tya=appeal_id
         MYA_EVIDENCE_LINK: http://sscs-cor.aat.platform.hmcts.net/support_evidence
         ONLINE_HEARING_LINK: http://sscs-cor.aat.platform.hmcts.net
         SSCS_MANAGE_EMAILS_LINK: http://sscs-cor.aat.platform.hmcts.net/manage-email-notifications/mac
