--- a/apps/sscs/sscs-tribunals-api/demo.yaml
+++ b/apps/sscs/sscs-tribunals-api/demo.yaml
@@ -52,7 +52,7 @@ spec:
         TEST_PROPERTY: false
         TYA_EVIDENCE_SUBMISSION_INFO_LINK: https://www.track-benefit-appeal.service.gov.uk/evidence/appeal_id
         SSCS_TRACK_YOUR_APPEAL_LINK: http://sscs-cor.demo.platform.hmcts.net/
-        MYA_LINK: http://sscs-cor.demo.platform.hmcts.net/trackyourappeal/appeal_id
+        MYA_LINK: http://sscs-cor.demo.platform.hmcts.net/sign-ign?tya=appeal_id
         MYA_EVIDENCE_LINK: http://sscs-cor.demo.platform.hmcts.net/support_evidence
         ONLINE_HEARING_LINK: http://sscs-cor.demo.platform.hmcts.net
         SSCS_MANAGE_EMAILS_LINK: http://sscs-cor.demo.platform.hmcts.net/manage-email-notifications/mac
