--- a/apps/hmc/hmc-cft-hearing-service/demo-image-policy.yaml
+++ b/apps/hmc/hmc-cft-hearing-service/demo-image-policy.yaml
@@ -3,7 +3,7 @@ kind: ImagePolicy
 metadata:
   name: demo-hmc-cft-hearing-service
   annotations:
-    hmcts.github.com/prod-automated: enabled
+    hmcts.github.com/prod-automated: disabled
 spec:
   filterTags:
     pattern: '^pr-529'
