EM-6410-revert to normal schedule

--- a/apps/em/em-hrs-api/prod.yaml
+++ b/apps/em/em-hrs-api/prod.yaml
@@ -16,9 +16,8 @@ spec:
         SUMMARY_REPORT_CRON: "0 */30 * * * *"
         MONTHLY_HEARING_REPORT_CRON: "0 15 3 1 * *"
         MONTHLY_HEARING_REPORT_ENABLED: true
-        MONTHLY_AUDIT_REPORT_CRON: "0 15 14 * * *"
+        MONTHLY_AUDIT_REPORT_CRON: "0 15 4 1 * *"
         MONTHLY_AUDIT_REPORT_ENABLED: true
-        MONTHLY_AUDIT_REPORT_REPORTSTART_DATES: "2024-01-01,2024-02-01,2024-03-01,2024-04-01,2024-05-01,2024-06-01"
         USE_AD_AUTH_FOR_SOURCE_BLOB_CONNECTION: true
         APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: INFO
         VH_ENABLE_REPORT: true
