--- a/apps/fees-pay/pba-payment-job/demo.yaml
+++ b/apps/fees-pay/pba-payment-job/demo.yaml
@@ -7,9 +7,9 @@ spec:
   releaseName: pba-payment-job
   values:
     job:
-      image: "hmctspublic.azurecr.io/payment/jobs:prod-f3a27ee-20250120103347" #{"$imagepolicy": "flux-system:pba-csv-report"}
+      image: "hmctspublic.azurecr.io/payment/jobs:pr-162" #{"$imagepolicy": "flux-system:pba-csv-report"}
       schedule: "*/30 * * * *"
       environment:
-        DUMMY_RESTART_VAR: true
+        DUMMY_RESTART_VAR: false
     global:
       environment: demo
