Pin SSCS tribs in demo

--- a/apps/sscs/sscs-tribunals-api/demo.yaml
+++ b/apps/sscs/sscs-tribunals-api/demo.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   values:
     java:
-      image: image: hmctspublic.azurecr.io/sscs/tribunals-api:pr-4361-a8c6ee8-20250131162657 #{"$imagepolicy": "flux-system:demo-sscs-tribunals-api"}
+      image: hmctspublic.azurecr.io/sscs/tribunals-api:pr-4361-a8c6ee8-20250131162657 #{"$imagepolicy": "flux-system:demo-sscs-tribunals-api"}
       aadIdentityName: sscs
       spotInstances:
         enabled: true
