Adding backstage to ptlsbox

--- a/apps/backstage/backstage/sbox-intsvc.yaml
+++ b/apps/backstage/backstage/sbox-intsvc.yaml
@@ -8,6 +8,7 @@ spec:
     ingress:
       host: backstage.sandbox.platform.hmcts.net
     backend:
+      image: hmctspublic.azurecr.io/backstage/backend:pr-10727413-1738323496
       db:
         user: pgadmin
         host: hmcts-backstage-flex-ptlsbox.postgres.database.azure.com
