--- a/clusters/sbox-intsvc/base/kustomization.yaml
+++ b/clusters/sbox-intsvc/base/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
   - ../../../apps/response/base/kustomize.yaml
   - ../../../apps/keda/base/kustomize.yaml
   - ../../../apps/clamav-mirror/base/kustomize.yaml
+  - ../../../apps/backstage/base/kustomize.yaml
 patches:
   - path: ../../../apps/base/kustomize.yaml
     target:
