Update docmosis license in lower envs

--- a/apps/docmosis/demo/base/docmosis-secret.yaml
+++ b/apps/docmosis/demo/base/docmosis-secret.yaml
@@ -1,27 +1,27 @@
 apiVersion: v1
 data:
-  DOCMOSIS_ACCESSKEY: ENC[AES256_GCM,data:lx7f4hu09HaGWGt/ewi7ar8IWIjaK1/H0OE+0hZoLbVG9YsrpDskxtpnLYbJQ9XtUUqpi6LGD/fVyY/s+PpCAVX21BWIHp7+uQXjA4Nocxc=,iv:qofCsUZcTJf6okkSVfe23BoMYPVadfSsnEJGXfdznGc=,tag:DUxjBKmvBjtAubjwiVzeoQ==,type:str]
-  DOCMOSIS_ADMINPW: ENC[AES256_GCM,data:bDVyMndBXuRorLy5KdwlT4Zw+E16pIMN,iv:CYzwl4YDf5vvGKbmb6Kp9z2kNq7UMnoBNRKpzjzgrFg=,tag:9N+19p3KBi8aHu1LsYsjnA==,type:str]
-  DOCMOSIS_KEY: ENC[AES256_GCM,data:83PipE9IwrKCTWKdSwtPkDfUxLT9TxY6rcm5KNPD6H2O/ChAnqWirH/7Fxedmet8osR8SC21M+O7UaMTWs2OX8vNTWM=,iv:FrVy6EHG/I6q0cX9JTu1LWIrPy9biyPfr61kI/44fas=,tag:FMu3GKP71TpvGO+bAfffEA==,type:str]
-  DOCMOSIS_SITE: ENC[AES256_GCM,data:9ovrk4W7XxqSUTxyLBDJkEDmP6p0v5vPjFQrI6prjAdU2uhh+gDY2ewFAVNKIJBIDDqvr/UvLLG2nAd8kkuGMF9kXbLJwiYArmsIWn9bQkFIFcLuWwqDfRv+M1cYANfFeSPnYS59cYxjlTz9QGHZw2RglHye8E3Z,iv:NQdKl9bxXUlPTlEwBZ4qAtyVa+BWb3WpOL5k9hepml4=,tag:ZCca/wecDidkf570mlX3VQ==,type:str]
+    DOCMOSIS_ACCESSKEY: ENC[AES256_GCM,data:sgFbYXjKStbiRjz9HsJmk6NdyQiD9aIMdjxxaMvPZDtWXF7l7OzHEwgRcSEYpCH/ihFzg0i+PJXAN88xUf5knw0szGaRRFPjwN4zl7fDmmQ=,iv:wz7AmluKuk0EMHTWu8GXcrZyTxWjCbyyzS0icfKWI2w=,tag:795CKpgKS53wR7fTa7Q05g==,type:str]
+    DOCMOSIS_ADMINPW: ENC[AES256_GCM,data:25Y4E3XcpM3PDJL+uuZhOP+9Vw6bHj8Z,iv:nsjMAMabjMxx3CgrBun5TGaoAVWjwqS6uKZ1zm37OxA=,tag:ePDgPROxJVB0F/WAiGSnXw==,type:str]
+    DOCMOSIS_KEY: ENC[AES256_GCM,data:uMxTfE0gN6jFjiKW0t/Tqs0/ilzI1U76pjQkpQeTRavJVsx/ipIMOxSYQnGTCrajROvad/27D7YBCak+ltaqc4MLhUT38EPm,iv:0piJvCduZbac426/dwxEHwAl1st0g8A6O1oyci8FXiE=,tag:1PnZ93Ct6LopwbVSxAFo3g==,type:str]
+    DOCMOSIS_SITE: ENC[AES256_GCM,data:xrFb1G82sMHU2HHjejBfkzRZy0xqwpWAScWlOLmpTgeplLRSCyyQvyDejMAZBzIh5p6DzPLAoBowZFzf3sL1d7MX2Aqg4NLAEh2T8pFZ7mt3H9Bg5eh8VgI3zfOskyIx2QJZHC8eCMVgZ3d4vL6ODfHkZKAnCL0abJD6jQ==,iv:wA7iavZJkgbKQhB6kzCj6aBxDwIjri0T7bqqAHYlQMk=,tag:y309w2tDt5823mckXl4CeA==,type:str]
 kind: Secret
 metadata:
-  name: docmosis-secret
-  namespace: docmosis
+    name: docmosis-secret
+    namespace: docmosis
 type: Opaque
 sops:
-  kms: []
-  gcp_kms: []
-  azure_kv:
-    - vault_url: https://dcdcftappsdemokv.vault.azure.net
-      name: sops-key
-      version: 7a5cc0c79b02466c86bc594c431e00f7
-      created_at: "2025-01-31T12:02:05Z"
-      enc: Wn42rXdZmRJ_SeguuGr895ZJHRfHYqyqrsFhtYq4dBjGBOLWmYY7XUos7EV5D12xWjqPFVuwkgQQiw3wjJgC0F-70-IKEjaar695IscXIQG7K0uC65vmH2gc9OjAD8QNOEbEoE1kIxsJko9IJCkTwHmsxwJkOSJ2Cok3Yl-4Ww_j-lAdMkN1cjRWjrVfhoZWQD2RAcCwzvzM58GuBrPRdMJaRBTWwoS7oxfkckbKRBTlbQTcfzAy7JcYnqW9Cx7uXynGeOg5iCZWBQ7hb6v6DJL_16On29uyZOxGnpffXrtFgzVjPzXE_cTH2VzcD5yk6dzBqYyA0Uj3um1Jif6_Pw
-  hc_vault: []
-  age: []
-  lastmodified: "2025-01-31T12:02:07Z"
-  mac: ENC[AES256_GCM,data:CbnX2rhFO8M6OabM4NqElWXwuNtOXUfUERkSqY5wqi2TwXaN7uzrNYiMvNi65ECwWAdjudnEJoepr2W34NFryit7BwAh0WJF84ltrchDkb4NYqRc+uDb0gIzJwuNyE4dFeIAMqbR3UnJusmPTPAr+ADsUVkatrX9hNXJ7+HLZ54=,iv:DLzrLLLgNCUkFFDpQCFAB5WIUhY2NARLtVy3diSJ60Y=,tag:NiNFs7ZqhUSubg1CZAHtWw==,type:str]
-  pgp: []
-  encrypted_regex: ^(data|stringData)$
-  version: 3.8.1
+    kms: []
+    gcp_kms: []
+    azure_kv:
+        - vault_url: https://dcdcftappsdevkv.vault.azure.net
+          name: sops-key
+          version: aedb9ea38954430ca1d0a46ed589c049
+          created_at: "2025-02-03T12:19:46Z"
+          enc: WLopgWQalPLkoKh5aDAV2kdvMDhKumruFQ0gVXTU7S2xhBr2ep_7ZzRjvGpHwUgqEHpMmhs2WEctbJ2m5lFAp6B5dDikRxsO3nLTSHcIenm5ad-JJB8lPmoeW5AOUpStLIpMZpKf77yg7SJG4hmrpOU7V8KBOCVfxRUPDfY_1iu-Z1Ci4KXQuaSMpkk2YgoZQTBac889Jgf-MiTNrWpH0q6e7pJZMN4SRcBFWbgNsNsDYMl2lVCov4FOGnw2jaOFdSN20UUKuciT6vQwZn_JJLTUz_R9pfDvDSWQR_krUJAVfDVCi-qKFlLWR1UMzrf288SWvP5bYq3BcPd2hrNaUg
+    hc_vault: []
+    age: []
+    lastmodified: "2025-02-03T12:19:48Z"
+    mac: ENC[AES256_GCM,data:EPCxphtreAJRa7Ssp9eBEsbqe5yrg1T4+h1vmS97Ltpq12WdgMFLaeEt5elvO0DreZ6lRkRJJ+XzS7OPT3ctSETp69hR572Eb9DoCJIvOjST/p6ffj9RYcbKypXf1Sm5TJjmzejmv3lYD+k4WYjy4AKvk8sCvwuiOfjA7DZNeAg=,iv:cwD8jE1yUnQTYobbJCREI8tLqX2ru7ONNvpI+ew7L28=,tag:3a8Bt4zYk6ePk6LW4AHc1w==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.8.1
