demo docmosis fix

--- a/apps/docmosis/demo/base/docmosis-secret.yaml
+++ b/apps/docmosis/demo/base/docmosis-secret.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 data:
-    DOCMOSIS_ACCESSKEY: ENC[AES256_GCM,data:sgFbYXjKStbiRjz9HsJmk6NdyQiD9aIMdjxxaMvPZDtWXF7l7OzHEwgRcSEYpCH/ihFzg0i+PJXAN88xUf5knw0szGaRRFPjwN4zl7fDmmQ=,iv:wz7AmluKuk0EMHTWu8GXcrZyTxWjCbyyzS0icfKWI2w=,tag:795CKpgKS53wR7fTa7Q05g==,type:str]
-    DOCMOSIS_ADMINPW: ENC[AES256_GCM,data:25Y4E3XcpM3PDJL+uuZhOP+9Vw6bHj8Z,iv:nsjMAMabjMxx3CgrBun5TGaoAVWjwqS6uKZ1zm37OxA=,tag:ePDgPROxJVB0F/WAiGSnXw==,type:str]
-    DOCMOSIS_KEY: ENC[AES256_GCM,data:uMxTfE0gN6jFjiKW0t/Tqs0/ilzI1U76pjQkpQeTRavJVsx/ipIMOxSYQnGTCrajROvad/27D7YBCak+ltaqc4MLhUT38EPm,iv:0piJvCduZbac426/dwxEHwAl1st0g8A6O1oyci8FXiE=,tag:1PnZ93Ct6LopwbVSxAFo3g==,type:str]
-    DOCMOSIS_SITE: ENC[AES256_GCM,data:xrFb1G82sMHU2HHjejBfkzRZy0xqwpWAScWlOLmpTgeplLRSCyyQvyDejMAZBzIh5p6DzPLAoBowZFzf3sL1d7MX2Aqg4NLAEh2T8pFZ7mt3H9Bg5eh8VgI3zfOskyIx2QJZHC8eCMVgZ3d4vL6ODfHkZKAnCL0abJD6jQ==,iv:wA7iavZJkgbKQhB6kzCj6aBxDwIjri0T7bqqAHYlQMk=,tag:y309w2tDt5823mckXl4CeA==,type:str]
+    DOCMOSIS_ACCESSKEY: ENC[AES256_GCM,data:TXd1IX1jC90xdHWwJiiTrckU6tyB6EERI6hs7ml5zR8zW9iW/xU2KwxXYFgMW4tE8Mgt9uq2SpfDWC7PMqr1xy9U6POoBr+3Kb1iCGg4Z+E=,iv:xzUF05uzhSH4DeZQVHNviHha0WBjW9GWFw6f3S3s/Hc=,tag:bTumKLk9oirApUl6f/lVag==,type:str]
+    DOCMOSIS_ADMINPW: ENC[AES256_GCM,data:92yquLo45wlLA1e/z92Z2h0+zZ4+rSLl,iv:tQIX+LAy38EIfp0R9IKbVI8hw4FtseGJlYnQZ0z0kKM=,tag:uvwAquHgG90MgZ4XMQ1SGw==,type:str]
+    DOCMOSIS_KEY: ENC[AES256_GCM,data:l6YK/eEC5+6hFrM18S9QKtB5PG615GJUphEoVVEYMKP3nMXUKYJNPEidMsVFGAQtp8Ely6xkfj+VUtqQwkPaqIQMFPD4PtQk,iv:a+ouQXDtwkSmkzwPIBAvUfyDuB76e0Ow7p4o3Pk8l1I=,tag:XWMnm/dnlg8NviAhJ7MckA==,type:str]
+    DOCMOSIS_SITE: ENC[AES256_GCM,data:BuADg9tZgNQRNUyGQGQvd5Cv1aiLW6H5MNek+ZQu4InLMZvjhwdCV+2ZRKvZ4fvRq82fXgmDomqegDaRCnaJR7RTkY49k9PjjqzWSjS0gqLyBp9psRBZR2FuMu6JXKjJmu52GIjuMehNlAtgjCZ92IWuj+0Vn+COUTb8xg==,iv:XR6+Scp+lh6ZzjuQgcoUfrFLh1Ycr3WxsY/kJcoHvJk=,tag:YLwNcLI3EA5+xM8jLpCsLw==,type:str]
 kind: Secret
 metadata:
     name: docmosis-secret
@@ -13,15 +13,15 @@ sops:
     kms: []
     gcp_kms: []
     azure_kv:
-        - vault_url: https://dcdcftappsdevkv.vault.azure.net
+        - vault_url: https://dcdcftappsdemokv.vault.azure.net
           name: sops-key
-          version: aedb9ea38954430ca1d0a46ed589c049
-          created_at: "2025-02-03T12:19:46Z"
-          enc: WLopgWQalPLkoKh5aDAV2kdvMDhKumruFQ0gVXTU7S2xhBr2ep_7ZzRjvGpHwUgqEHpMmhs2WEctbJ2m5lFAp6B5dDikRxsO3nLTSHcIenm5ad-JJB8lPmoeW5AOUpStLIpMZpKf77yg7SJG4hmrpOU7V8KBOCVfxRUPDfY_1iu-Z1Ci4KXQuaSMpkk2YgoZQTBac889Jgf-MiTNrWpH0q6e7pJZMN4SRcBFWbgNsNsDYMl2lVCov4FOGnw2jaOFdSN20UUKuciT6vQwZn_JJLTUz_R9pfDvDSWQR_krUJAVfDVCi-qKFlLWR1UMzrf288SWvP5bYq3BcPd2hrNaUg
+          version: 7a5cc0c79b02466c86bc594c431e00f7
+          created_at: "2025-02-03T17:21:47Z"
+          enc: hzjb1uzECBsVh5lqa4-VkU23meI2CTNO4A5lD60TsRTFtPUY21i7NbOG8QxEb74pRAw05KoJiEqU6NbUdkeMYh3rnOT6Qsnp45l_XZdPv84otOdNPGdOFi4kNAsRoiqW-mGWz6jAW_cQhs-BPrLQ-plCgjNr7OUM009mpyYZyBtxXMvvt0aNt1ZMLVuMCmp0nae_xJUH_sGyxbmPflbtvm91XjCPtTpd4ar5ingWhmCyoPwTb6CrG848VtuT3FqbTmQfHsI1hdxg6JAJ3UJ62NHrQfz95nOlZCDyM4qP1vAgb98HgOG8zoxx_d9qslMbjenFy4CiX_ksOj4Y1byPyw
     hc_vault: []
     age: []
-    lastmodified: "2025-02-03T12:19:48Z"
-    mac: ENC[AES256_GCM,data:EPCxphtreAJRa7Ssp9eBEsbqe5yrg1T4+h1vmS97Ltpq12WdgMFLaeEt5elvO0DreZ6lRkRJJ+XzS7OPT3ctSETp69hR572Eb9DoCJIvOjST/p6ffj9RYcbKypXf1Sm5TJjmzejmv3lYD+k4WYjy4AKvk8sCvwuiOfjA7DZNeAg=,iv:cwD8jE1yUnQTYobbJCREI8tLqX2ru7ONNvpI+ew7L28=,tag:3a8Bt4zYk6ePk6LW4AHc1w==,type:str]
+    lastmodified: "2025-02-03T17:21:49Z"
+    mac: ENC[AES256_GCM,data:uyxdqWBBJnjZNstFdMLH5nEvuQB0h7YRbHgIqk/+sx9m/SvRAa4jejbaLXjJAKAGPY08/f0pEAsJUA9P9d62tyCha+M1RCv9Fwu9Dh4yWtPM37khyfa1hPJWBYko3LUKbS5OuYLVvO9A6u4ddRR8GRhEC45JasOkMH+FdW4NKW8=,iv:baLZ8cLpMdHirbthMZl8+3y0XQ0yRtpwxoHX5GnmOhY=,tag:IcRLJCqamEJXpaCq5b85aw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
