--- a/apps/em/em-hrs-api/prod.yaml
+++ b/apps/em/em-hrs-api/prod.yaml
@@ -21,5 +21,6 @@ spec:
         USE_AD_AUTH_FOR_SOURCE_BLOB_CONNECTION: true
         APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: INFO
         VH_ENABLE_REPORT: true
+        TTL_ENABLED: true
       spotInstances:
         enabled: false
