Enable draft order review overdue cron job in prod

--- a/apps/financial-remedy/finrem-cron-draft-order-review-overdue/prod/prod.yaml
+++ b/apps/financial-remedy/finrem-cron-draft-order-review-overdue/prod/prod.yaml
@@ -11,7 +11,7 @@ spec:
       useInterpodAntiAffinity: true
       environment:
         TASK_NAME: DraftOrderReviewOverdueSendNotificationTask
-        CRON_DRAFT_ORDER_REVIEW_OVERDUE_NOTIFICATION_SENT_ENABLED: false
+        CRON_DRAFT_ORDER_REVIEW_OVERDUE_NOTIFICATION_SENT_ENABLED: true
         CRON_DRAFT_ORDER_REVIEW_OVERDUE_NOTIFICATION_SENT_BATCH_SIZE: 2000
         CRON_DRAFT_ORDER_REVIEW_OVERDUE_NOTIFICATION_SENT_DAYS_SINCE_ORDER_UPLOAD: 14
         FEATURE_PBA_CASE_TYPE: false
