FACT-1731 added flux changes for ithc

--- a/apps/bsp/automation/kustomization.yaml
+++ b/apps/bsp/automation/kustomization.yaml
@@ -3,20 +3,25 @@ kind: Kustomization
 resources:
   - ../bulk-scan-orchestrator/image-repo.yaml
   - ../bulk-scan-orchestrator/demo-image-policy.yaml
+  - ../bulk-scan-orchestrator/ithc-image-policy.yaml
   - ../bulk-scan-orchestrator/image-policy.yaml
   - ../bulk-scan-orchestrator/perftest-image-policy.yaml
   - ../bulk-scan-payment-processor/image-repo.yaml
   - ../bulk-scan-payment-processor/demo-image-policy.yaml
+  - ../bulk-scan-payment-processor/ithc-image-policy.yaml
   - ../bulk-scan-payment-processor/image-policy.yaml
   - ../bulk-scan-payment-processor/perftest-image-policy.yaml
   - ../bulk-scan-processor/image-repo.yaml
   - ../bulk-scan-processor/demo-image-policy.yaml
+  - ../bulk-scan-processor/ithc-image-policy.yaml
   - ../bulk-scan-processor/image-policy.yaml
   - ../bs-cron-trigger-daily-checks/image-repo.yaml
   - ../bs-cron-trigger-daily-checks/demo-image-policy.yaml
+  - ../bs-cron-trigger-daily-checks/ithc-image-policy.yaml
   - ../bs-cron-trigger-daily-checks/image-policy.yaml
   - ../bp-cron-trigger-daily-checks/image-repo.yaml
   - ../bp-cron-trigger-daily-checks/demo-image-policy.yaml
+  - ../bp-cron-trigger-daily-checks/ithc-image-policy.yaml
   - ../bp-cron-trigger-daily-checks/image-policy.yaml
   - ../rpe-send-letter-service/demo-image-policy.yaml
   - ../rpe-send-letter-service/image-repo.yaml
