--- a/apps/bsp/ithc/base/kustomization.yaml
+++ b/apps/bsp/ithc/base/kustomization.yaml
@@ -8,4 +8,9 @@ resources:
 namespace: bsp
 patches:
   - path: ../../rpe-send-letter-service/ithc.yaml
+  - path: ../../bulk-scan-orchestrator/ithc.yaml
+  - path: ../../bulk-scan-payment-processor/demo.yaml
+  - path: ../../bulk-scan-processor/demo.yaml
+  - path: ../../bs-cron-trigger-daily-checks/demo.yaml
+  - path: ../../bp-cron-trigger-daily-checks/demo.yaml
   - path: ../../serviceaccount/ithc.yaml
