Updated config for testing prod fix

--- a/apps/dm-store/dm-store/demo.yaml
+++ b/apps/dm-store/dm-store/demo.yaml
@@ -9,3 +9,5 @@ spec:
       environment:
         ENABLE_TTL: false
         TEST_VAR: refresh_true
+        UPLOAD_BLOCK_SIZE: 8
+        UPLOAD_MAX_CONCURRENCY: 10
