--- a/apps/financial-remedy/finrem-cron-one-off-task/prod/prod.yaml
+++ b/apps/financial-remedy/finrem-cron-one-off-task/prod/prod.yaml
@@ -27,6 +27,7 @@ spec:
         CRON_WAIT_TIME_MINS: 1
         TASK_NAME: ManageHearingsMigrationTask
         CRON_MANAGE_HEARINGS_MIGRATION_ENABLED: false
+        CRON_MANAGE_HEARINGS_MIGRATION_DRY_RUN: true
         CRON_MANAGE_HEARINGS_MIGRATION_ROLLBACK: false
         CRON_MANAGE_HEARINGS_MIGRATION_CASE_LIST_FILENAME: "manageHearingsMigration-encrypted.csv"
         CRON_MANAGE_HEARINGS_MIGRATION_VERSION: "v1"
