--- a/apps/financial-remedy/finrem-cron-one-off-task/demo/demo.yaml
+++ b/apps/financial-remedy/finrem-cron-one-off-task/demo/demo.yaml
@@ -22,6 +22,7 @@ spec:
         CASE_DOCUMENT_AM_URL: "http://ccd-case-document-am-api-demo.service.core-compute-demo.internal"
         TASK_NAME: ManageHearingsMigrationTask
         CRON_MANAGE_HEARINGS_MIGRATION_ENABLED: true
+        CRON_MANAGE_HEARINGS_MIGRATION_DRY_RUN: true
         CRON_MANAGE_HEARINGS_MIGRATION_ROLLBACK: true
         CRON_MANAGE_HEARINGS_MIGRATION_CASE_LIST_FILENAME: "manageHearingsMigration-encrypted.csv"
         CRON_MANAGE_HEARINGS_MIGRATION_VERSION: "rollback1"
